# swig-cmake

./: .gitignore  CMakeLists.txt  README.md
scripts/: build.sh
src/: CMakeLists.txt  cmake_swig_test.c  cmake_swig_test.h
swig/: CMakeLists.txt  cmake_swig_test.i
